fix a comment in global.css. make text a bit smaller on smaller screens for post headers

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -120,9 +120,9 @@
     }
 
     & :where(h2) {
-        @apply flex flex-row items-center text-lg;
+        @apply flex flex-row items-center text-base md:text-lg;
 
-        /* After primary headers, fill the remaining space with diagonal lines. */
+        /* After primary headers, fill the remaining space with a single lines. */
         &::after {
             content: "";
             @apply grow border-t border-line ml-4;
